3D Viewport Bug - Ghosting of Geometry - Blender 2.8 d28d202fd1 on macOS High Sierra 10.13.5 #55987

Closed
opened 2018-07-15 22:38:00 +02:00 by Martin · 51 comments

System Information
Macbook Pro 15inch, 2017
macOS High Sierra 10.13.5
Intel Core i7 2.9GHz
Radeon Pro 560 4096 MB
Intel HD Graphics 630 1536 MB

Blender Version
Broken: 2.8 d28d202fd1 x86_64
Worked: 2.79 ;)

Short description of error
When I scroll in on an object, i. e. a cube, when I zoom back out i still see some slight silhouette of the cube blocking parts of the grid and other objects. As soon as i resize the viewport it disappears but comes back as soon as i zoom or rotate the 3D View. I attached a screencapture to elaborate.
Blender-d28d202fd1-x86_64-viewport-bug.mp4

Exact steps for others to reproduce the error
Vanilla Blender 2.8 without modifications. Regular Startup File with Eevee.

**System Information** Macbook Pro 15inch, 2017 macOS High Sierra 10.13.5 Intel Core i7 2.9GHz Radeon Pro 560 4096 MB Intel HD Graphics 630 1536 MB **Blender Version** Broken: 2.8 d28d202fd1 x86_64 Worked: 2.79 ;) **Short description of error** When I scroll in on an object, i. e. a cube, when I zoom back out i still see some slight silhouette of the cube blocking parts of the grid and other objects. As soon as i resize the viewport it disappears but comes back as soon as i zoom or rotate the 3D View. I attached a screencapture to elaborate. [Blender-d28d202fd1-x86_64-viewport-bug.mp4](https://archive.blender.org/developer/F3942988/Blender-d28d202fd1-x86_64-viewport-bug.mp4) **Exact steps for others to reproduce the error** Vanilla Blender 2.8 without modifications. Regular Startup File with Eevee.
Author

Added subscriber: @Maddin

Added subscriber: @Maddin

#56454 was marked as duplicate of this issue

#56454 was marked as duplicate of this issue

#55977 was marked as duplicate of this issue

#55977 was marked as duplicate of this issue

Added subscribers: @fclem, @Jeroen-Bakker, @mont29

Added subscribers: @fclem, @Jeroen-Bakker, @mont29

Looks like a buffer refreshing issue or something… @fclem might have a better idea of the problem, or maybe @Jeroen-Bakker ?

Looks like a buffer refreshing issue or something… @fclem might have a better idea of the problem, or maybe @Jeroen-Bakker ?
Member

Seems like Z-fighting during the TAA. Can be that the buffers are not copied correctly, but that is strange as it only uses BLIT functions.

@Maddin Can you try to set the viewport quality to 0 in the user preferences. This will disable TAA and see if this helps.
Will try to reproduce it, but I don't have the hardware it is failing on.

Seems like Z-fighting during the TAA. Can be that the buffers are not copied correctly, but that is strange as it only uses BLIT functions. @Maddin Can you try to set the viewport quality to 0 in the user preferences. This will disable TAA and see if this helps. Will try to reproduce it, but I don't have the hardware it is failing on.
Author

Good morning. Unfortunately that didn't have an effect. Still the same. It only occurs in LookDev mode, in solid and rendered mode everything is fine.

Good morning. Unfortunately that didn't have an effect. Still the same. It only occurs in LookDev mode, in solid and rendered mode everything is fine.

@Maddin You say that it only occurs in LookDev mode but your video is in Solid mode.

If you did what @Jeroen-Bakker suggested, it affects the Solid view only.
If you want to disable the TAA for lookdev and rendered mode go to the Render Properties panel (with EEVEE as render engine) and under the sampling tab set the viewport samples to 1.

@Maddin You say that it only occurs in LookDev mode but your video is in Solid mode. If you did what @Jeroen-Bakker suggested, it affects the Solid view only. If you want to disable the TAA for lookdev and rendered mode go to the Render Properties panel (with EEVEE as render engine) and under the sampling tab set the viewport samples to 1.
Author

Of course, you're right. Viewport Quality affects solid mode. Check. But setting viewport samples to 1 or 0 does not work for the lookdev mode. Still the same effect.

// EDIT

Sorry, was in Cycles for the last part. Now its gone! You're right :)

Of course, you're right. Viewport Quality affects solid mode. Check. But setting viewport samples to 1 or 0 does not work for the lookdev mode. Still the same effect. // EDIT Sorry, was in Cycles for the last part. Now its gone! You're right :)
Author

Just a FYI: As a workaround, so i don't have to turn down sampling or viewport quality, i just put a big plane in the background. Its only an issue with a transparent backdrop.

Just a FYI: As a workaround, so i don't have to turn down sampling or viewport quality, i just put a big plane in the background. Its only an issue with a transparent backdrop.
Member

Added subscriber: @kostex

Added subscriber: @kostex
Member

on AMD Radeon R9 M395X 4096 MB (OSX iMac 5k) the proposed Viewport Samples and viewport quality "fixes" the issue.
However in Eevee Render Preview and enabled screen(space)_subsurface_scattering, viewport still acts up.
Screen Shot 2018-07-23 at 17.34.11.jpg

on AMD Radeon R9 M395X 4096 MB (OSX iMac 5k) the proposed Viewport Samples and viewport quality "fixes" the issue. However in Eevee Render Preview and enabled screen(space)_subsurface_scattering, viewport still acts up. ![Screen Shot 2018-07-23 at 17.34.11.jpg](https://archive.blender.org/developer/F4023038/Screen_Shot_2018-07-23_at_17.34.11.jpg)

For the record the culprit function might be GPU_framebuffer_blit.

It breaks TAA in workbench (solid view) and Eevee as well as Eeevee Subsurface because they all use this function.

@kostex Are you sure this glitch happen with the AMD GPU?

For the record the culprit function might be GPU_framebuffer_blit. It breaks TAA in workbench (solid view) and Eevee as well as Eeevee Subsurface because they all use this function. @kostex Are you sure this glitch happen with the AMD GPU?

Added subscribers: @zgorg, @brecht, @Sergey

Added subscribers: @zgorg, @brecht, @Sergey
Member

Fairly Sure ;-)
Screen Shot 2018-07-23 at 20.20.54.jpg

Fairly Sure ;-) ![Screen Shot 2018-07-23 at 20.20.54.jpg](https://archive.blender.org/developer/F4024027/Screen_Shot_2018-07-23_at_20.20.54.jpg)

@kostex this does not indicate the graphic card used by OpenGL.

To know that, use Help menu > Save System Info.
Then search for the Opengl renderer string.

@kostex this does not indicate the graphic card used by OpenGL. To know that, use Help menu > Save System Info. Then search for the Opengl renderer string.
Member

That's what you get when dealing with noobs ;-) Sorry..

But the OpenGL Renderer is in fact AMD.. is it not? I don't dare to conclude anything anymore ;-)
system-info.txt

That's what you get when dealing with noobs ;-) Sorry.. But the OpenGL Renderer is in fact AMD.. is it not? I don't dare to conclude anything anymore ;-) [system-info.txt](https://archive.blender.org/developer/F4024220/system-info.txt)
Author

I attached mine too. Since GPU Rendering, at least with cycles, is broken since for ever on the mac, i always thought blender is running sole on CPU. Who knew.

system-info.txt

I attached mine too. Since GPU Rendering, at least with cycles, is broken since for ever on the mac, i always thought blender is running sole on CPU. Who knew. [system-info.txt](https://archive.blender.org/developer/F4024624/system-info.txt)

So seems you are both using the AMD card. So there is a similar problem on the intel 630 on windows reported by other users.

So seems you are both using the AMD card. So there is a similar problem on the intel 630 on windows reported by other users.

Added subscriber: @Sankel

Added subscriber: @Sankel

I also have the same issue as mentioned above. On an iMac5K with AMD Radeon Pro 580.

system-info.txt

I also have the same issue as mentioned above. On an iMac5K with AMD Radeon Pro 580. [system-info.txt](https://archive.blender.org/developer/F4085551/system-info.txt)

Hello my subject was connected to this one.
WIN 10 processor intel I3 7300 HD graphics 630
last driver win64_24.20.100.6194
blender-2.80-8f01623ef31-win64
yesterday I tried the new version and now I get something normal in solid view
but with EEVEE and cycles the same issue in material view (lookdev) and render view
Open GL is ok in material view
I tried the different setting in viewportsampling to 1 and viewport quality to 0 > no change

Hello my subject was connected to this one. WIN 10 processor intel I3 7300 HD graphics 630 last driver win64_24.20.100.6194 blender-2.80-8f01623ef31-win64 yesterday I tried the new version and now I get something normal in solid view but with EEVEE and cycles the same issue in material view (lookdev) and render view Open GL is ok in material view I tried the different setting in viewportsampling to 1 and viewport quality to 0 > no change

Added subscribers: @ClementPellegrini-3, @OathOfPosidon

Added subscribers: @ClementPellegrini-3, @OathOfPosidon

As of right now, Intel Integrated Graphics users are having the black ghosting affect in the Eevee render mode as well. The workbench is working fine, and cycles works fine, but Eevee does not. It has been a bug for some time now, but we havent had a proper means to report it, although it does technically lead to a crash if one tries to edit materials while in the Eevee renderer. A lot of us are eager to use Eevee, as it seems to be an extremely valuable asset, we are not able to though because of this bug.

As far as I have heard, its affecting a wide range of different Integrated Graphics cards from Intel. For instance, mine is a 530, but as stated above, the 630 is also having the issue. @ClementPellegrini-3

As of right now, Intel Integrated Graphics users are having the black ghosting affect in the Eevee render mode as well. The workbench is working fine, and cycles works fine, but Eevee does not. It has been a bug for some time now, but we havent had a proper means to report it, although it does technically lead to a crash if one tries to edit materials while in the Eevee renderer. A lot of us are eager to use Eevee, as it seems to be an extremely valuable asset, we are not able to though because of this bug. As far as I have heard, its affecting a wide range of different Integrated Graphics cards from Intel. For instance, mine is a 530, but as stated above, the 630 is also having the issue. @ClementPellegrini-3

I'm guessing that the Intel thing isn't as high of a priority as others, which is understandable. Just really makes testing Eevee hard when one cant actually use Eevee. As of right now, the main reason I'm not using blender is because Intel users can't use the Eevee render engine (nor material preview in both Cycles and Eevee) because it's broken for Integrated graphics cards.

I'm guessing that the Intel thing isn't as high of a priority as others, which is understandable. Just really makes testing Eevee hard when one cant actually use Eevee. As of right now, the main reason I'm not using blender is because Intel users can't use the Eevee render engine (nor material preview in both Cycles and Eevee) because it's broken for Integrated graphics cards.

@OathOfPosidon It's not that it is a lower priority issue it's just that it's hard to debug this particular issue without access to the hardware. But I found someone who has the same issue and live nearby so I will fix this ASAP.

@OathOfPosidon It's not that it is a lower priority issue it's just that it's hard to debug this particular issue without access to the hardware. But I found someone who has the same issue and live nearby so I will fix this ASAP.

@fclem Thank you for the work that you are doing, I'm sorry if my previous comment came off as demanding or anything, because it wasn't. I really do appreciate you caring enough to look into, and fix, the bug.

@fclem Thank you for the work that you are doing, I'm sorry if my previous comment came off as demanding or anything, because it wasn't. I really do appreciate you caring enough to look into, and fix, the bug.

Added subscriber: @PawelBzyl

Added subscriber: @PawelBzyl
Author

Good evening gentlemen. Is there any news on this issue? Right now it's the one thing keeping me from really getting into 2.8. I just compiled again, but the bug still persists.

Thanks :)

Good evening gentlemen. Is there any news on this issue? Right now it's the one thing keeping me from really getting into 2.8. I just compiled again, but the bug still persists. Thanks :)

Naamloos.jpeg

Because of this planes viewed in orto arent't visable, unless you're in edit-mode

![Naamloos.jpeg](https://archive.blender.org/developer/F4669868/Naamloos.jpeg) Because of this planes viewed in orto arent't visable, unless you're in edit-mode

Added subscriber: @orfeo

Added subscriber: @orfeo

Screenshot 2018-10-02 at 11.54.13.png

If I set the Viewport Quality to 0.000 the ghosting is gone

Blender 2.80 Alpha 2 (2018-09-30)
MacBook Pro (15-inch, 2017)
macOS Mojave 10.14

![Screenshot 2018-10-02 at 11.54.13.png](https://archive.blender.org/developer/F4905453/Screenshot_2018-10-02_at_11.54.13.png) If I set the Viewport Quality to 0.000 the ghosting is gone Blender 2.80 Alpha 2 (2018-09-30) MacBook Pro (15-inch, 2017) macOS Mojave 10.14

This works for me!

Blender 2.8 Alpha 2 (2018-09-29)
iMac 27" (2017)
macOS Mojave 10.14

This works for me! Blender 2.8 Alpha 2 (2018-09-29) iMac 27" (2017) macOS Mojave 10.14

video to show the situation now on HD630
1rst October version
https://www.youtube.com/watch?v=dG-6Cfb-jFE

viewport is at 0
and when I close preferences window > crash
even if I want to open fullscreen

video to show the situation now on HD630 1rst October version https://www.youtube.com/watch?v=dG-6Cfb-jFE viewport is at 0 and when I close preferences window > crash even if I want to open fullscreen

it's working! the very last update of my graphic card HDgraphics630 helps
a bug with contact shadowartefact on the left
other user of HD graphics, what are your settings?

it's working! the very last update of my graphic card HDgraphics630 helps a bug with contact shadow[artefact on the left ](https://www.dropbox.com/s/zkjhviqrjonu7bm/Blender.jpg?dl=0) other user of HD graphics, what are your settings?

but I have some little black points on my surface and I don't know why

but I have some little black points on my surface and I don't know why

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Clément Foucault self-assigned this 2018-11-09 12:13:40 +01:00

I think we fixed this issue for everyone now. Closing.

I think we fixed this issue for everyone now. Closing.

yes it's working. big job. I had hope a such work in the interface. but it's not so sure about that...for instance modifications in keys are strange and often useless! I have to restored shift C cursor to center, ctrl alt shit c set origin. I added shift RMB to move cursor and shift alt RMB to move it on surfaces ^^ it's already possible in the key configuration. why not present in their tool menu. border select have a bug in object mode: it doesn't add several selections. it's cool to work on such mysterious keys like alt E to add several color in the ramp node but there is more logical things to do first. ctrl t and alt t back! no way. why all this is still present but was substract from the settings. ctrl u is back no way...
and in the interface if they don't understand how much faster is a crtl t I dont have to explain many other things...

yes it's working. big job. I had hope a such work in the interface. but it's not so sure about that...for instance modifications in keys are strange and often useless! I have to restored shift C cursor to center, ctrl alt shit c set origin. I added shift RMB to move cursor and shift alt RMB to move it on surfaces ^^ it's already possible in the key configuration. why not present in their tool menu. border select have a bug in object mode: it doesn't add several selections. it's cool to work on such mysterious keys like alt E to add several color in the ramp node but there is more logical things to do first. ctrl t and alt t back! no way. why all this is still present but was substract from the settings. ctrl u is back no way... and in the interface if they don't understand how much faster is a crtl t I dont have to explain many other things...

Added subscriber: @nielspl-2

Added subscriber: @nielspl-2

Hi Clément. I had the exact same issue on the Mac (hackintosh) with an AMD Radeon RX 560. Adding the exact matching string "AMD Radeon RX 560 OpenGL Engine" resolved it.

Can you, depending on the scope of this issue, add:
"AMD Radeon RX 560 OpenGL Engine" or
"AMD Radeon RX 560" or
"AMD Radeon RX"?

gpu_extensions.c

#if defined(__APPLE__)
    if (strstr(renderer, "AMD Radeon Pro") || strstr(renderer, "AMD Radeon R9") || strstr(renderer, "AMD Radeon RX 560 OpenGL Engine")) {
        GG.depth_blitting_workaround = true;            
    }
#endif
Hi Clément. I had the exact same issue on the Mac (hackintosh) with an AMD Radeon RX 560. Adding the exact matching string `"AMD Radeon RX 560 OpenGL Engine"` resolved it. Can you, depending on the scope of this issue, add: `"AMD Radeon RX 560 OpenGL Engine"` or `"AMD Radeon RX 560"` or `"AMD Radeon RX"`? gpu_extensions.c ``` #if defined(__APPLE__) if (strstr(renderer, "AMD Radeon Pro") || strstr(renderer, "AMD Radeon R9") || strstr(renderer, "AMD Radeon RX 560 OpenGL Engine")) { GG.depth_blitting_workaround = true; } #endif ```

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Niels reopened this issue 2018-11-27 16:37:09 +01:00

Hi. I forgot to re-open this issue yesterday.

Can anyone apply my "fix" as shown in my previous post?

Hi. I forgot to re-open this issue yesterday. Can anyone apply my "fix" as shown in my previous post?

to validate some changes in material I have to click on the object it's like if it was not selected anymore.
in edit stroke I don't see any selection but it is selected
and I opened a bug about B not selecting several object in object mode.
I think it 's linked to graphic card (HD grahic 630)

to validate some changes in material I have to click on the object it's like if it was not selected anymore. in edit stroke I don't see any selection but it is selected and I opened a bug about B not selecting several object in object mode. I think it 's linked to graphic card (HD grahic 630)

This issue was referenced by 52458ab49d

This issue was referenced by 52458ab49d40081466e369709d68c13a6a47663e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @synth1983

Added subscriber: @synth1983

Hi!
I use Radeon Vega 64
I have some other type of overlapping glitches in viewport when using bevel modifier in Edit Mode and in Ortho view mode
It randomly flickers and changing during viewport movements.

Screen Shot 2018-12-10 at 14.39.19.png

Hi! I use Radeon Vega 64 I have some other type of overlapping glitches in viewport when using bevel modifier in Edit Mode and in Ortho view mode It randomly flickers and changing during viewport movements. ![Screen Shot 2018-12-10 at 14.39.19.png](https://archive.blender.org/developer/F5908195/Screen_Shot_2018-12-10_at_14.39.19.png)
Member

Timur,

I think you need to check your topology.. you've got overlapping faces.. That's how that looks like.. has nothing to do with this (fixed) bug as I see it

Timur, I think you need to check your topology.. you've got overlapping faces.. That's how that looks like.. has nothing to do with this (fixed) bug as I see it

Added subscriber: @isoueu

Added subscriber: @isoueu

This comment was removed by @isoueu

*This comment was removed by @isoueu*
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
14 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55987
No description provided.