GPU: Add AMD Radeon RX series to macos blitting workaround list

Fixes T55987